movies service works

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,1 +1,13 @@
 <h1> Time to find the movie you are looking for! </h1>
+
+<%= form_tag (movies_path) do %>
+
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">   
+  	<p> <%= label_tag 'name', "Which movie are you looking for?"  %> </p>
+  	<p> <%= text_field_tag(:name) %> </p>
+  	<p> <%= submit_tag 'Look for my movie!', class: "btn btn-primary"%></p>
+  </div>
+</div>
+
+<% end %>
