--- a/app/views/movies/search.html.erb
+++ b/app/views/movies/search.html.erb
@@ -2,19 +2,24 @@
 
 <table class="table table-striped">
       <tr>
-      <th>Movie</th>
-      <th>Director</th>
-      <th>Overview</th>
-      <th>Release Date</th>
-
-    </tr>
+      	<th>Movie</th>
+      	<th>Director</th>
+      	<th>Overview</th>
+      	<th>Release Date</th>
+      	<th>Image</th>
+   	  </tr>
 
   <% @movies.each do |movie| %> 
     <tr>
-    <td> <%= movie.title %> </td>
-    <td> <%= movie.director %> </td>
-    <td> <%= movie.release_date %> </td>
-    <td> <%= movie.overview %> </td>
+    	<td> <%= movie.title %> </td>
+    	<td> <%= movie.director %> </td>
+    	<td> <%= movie.release_date %> </td>
+    	<td> <%= movie.overview %> </td>
+    	<td> <% if movie.poster_path %>
+    		<img src="http://image.tmdb.org/t/p/w185/<%= movie.poster_path %>" > 
+    		<%end%>
+    	</td>
+
     </tr>
     <% end %>
   </table>
