--- a/app/views/movies/search.html.erb
+++ b/app/views/movies/search.html.erb
@@ -27,7 +27,7 @@
   </table>
 
 <% else %>
-<p class="text-center"> It seems that no movies correponds to your search... </p>
+<p class="text-center"> It seems that no movie correponds to your search... </p>
 <% end %>
 
 
