--- a/app/views/movies/search.html.erb
+++ b/app/views/movies/search.html.erb
@@ -1,33 +1,35 @@
 <h1> Result for <%= @name %> </h1>
 
-<% if @movies.count > 1 %>
+<% if @movies.count < 1 || @movies.empty? %>
+
+<p class="text-center"> It seems that no movie correponds to your search... </p>
+
+<% else %>
+
 <h2> Only the first 20 results are displayed </h2>
 <table class="table table-striped">
       <tr>
-      	<th>Movie</th>
-      	<th>Director</th>
+        <th>Movie</th>
+        <th>Director</th>
         <th>Release Date</th>
-      	<th>Overview</th>      	
-      	<th>Image</th>
-   	  </tr>
+        <th>Overview</th>       
+        <th>Image</th>
+      </tr>
 
   <% @movies.take(20).each do |movie| %> 
     <tr>
-    	<td> <%= movie.title %> </td>
-    	<td> <%= movie.director %> </td>
-    	<td> <%= movie.release_date %> </td>
-    	<td> <%= movie.overview %> </td>
-    	<td> <% if movie.poster_path %>
-    		<img src="http://image.tmdb.org/t/p/w185/<%= movie.poster_path %>" >  
+      <td> <%= movie.title %> </td>
+      <td> <%= movie.director %> </td>
+      <td> <%= movie.release_date %> </td>
+      <td> <%= movie.overview %> </td>
+      <td> <% if movie.poster_path %>
+        <img src="http://image.tmdb.org/t/p/w185/<%= movie.poster_path %>" >  
         <%end%>
-    	</td>
+      </td>
 
     </tr>
     <% end %>
   </table>
-
-<% else %>
-<p class="text-center"> It seems that no movie correponds to your search... </p>
 <% end %>
 
 
